# MCNP CMAKE FILE
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

INCLUDE_DIRECTORIES(${EMBREE_PATH}/common ${EMBREE_PATH}/build ${EMBREE_PATH}/include ${CMAKE_CURRENT_SOURCE_DIR})

MESSAGE(${CMAKE_CURRENT_SOURCE_DIR})

LIST(APPEND EMDAG_SRC main.cpp embree.cpp)

ADD_EXECUTABLE(emdag ${EMDAG_SRC})


#embree libs
set(EMBREE_LIBRARIES ${EMBREE_PATH}/build/libembree.so)

target_link_libraries(emdag ${MOAB_LIBRARIES} ${EMBREE_LIBRARIES} )

INSTALL( TARGETS emdag RUNTIME DESTINATION ${INSTALL_BIN_DIR} )
